# camport3-rust

./: .clangd  .gitignore  Cargo.toml
.cargo/: config.toml
camport3-rs/: Cargo.toml
camport3-rs/examples/: list_devices.rs  simple_viewer.rs
camport3-rs/src/: ffi.rs  ffi_macros.rs  lib.rs  types.rs  utils.rs
camport3-rs/tests/: test_macros.rs
camport3-sys/: Cargo.toml  build.rs  wrapper.h
camport3-sys/include/camport3/: TYApi.h  TYCoordinateMapper.h  TYImageProc.h
camport3-sys/src/: lib.rs
